---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2023-1-????????????????????????????????????????????????????????????????
  Features:
    - Adapted mod: jetpack
    - Adapted mod: aai-industry
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2023-1-26
  Features:
    - Add character properties configuration
    - Add module-related configuration
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2023-1-23
  Features:
    - Adaptation to vehicle weapons
    - Add capsule configuration options
    - Add combat-robot configuration options
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2023-1-21
  Features:
    - Adaptation mod: aai-containers
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2023-1-18
  Features:
    - Add equipment configuration
    - Add defense-related configuration
    -
    - The basic functions have been completed.
    - The next step is to refine and adapt the mod.
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2023-1-18
  Features:
    - Add armor configuration
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2023-1-17
  Features:
    - Add grenade-related configuration
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2023-1-16
  Features:
    - Add weapon configuration items
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2023-1-16
  Features:
    - Assigning flags to configuration items