@@ -18,4 +18,4 @@ require("tweak.15_character") -- 角色-------角色属性
 
 require("tweak.99_do_nothing") -- 适配mod时，做记录用
 
-require("tweak.test") -- 测试
+-- require("tweak.test") -- 测试
