@@ -10,6 +10,10 @@ local data_raw_robot_catalog = {
             "logistic-robot", -- 物流机器人
         },
         mod = {
+            "bob-logistic-robot-2", -- boblogistics
+            "bob-logistic-robot-3",
+            "bob-logistic-robot-4",
+            "bob-logistic-robot-5" -- boblogistics
         },
         mul = settings.startup["x-custom-game-robot-performance-multiplier"].value,
         modify_parameter = { -- 修改参数
@@ -35,6 +39,10 @@ local data_raw_robot_catalog = {
             "construction-robot", -- 建设机器人
         },
         mod = {
+            "bob-construction-robot-2", -- boblogistics
+            "bob-construction-robot-3",
+            "bob-construction-robot-4",
+            "bob-construction-robot-5" -- boblogistics
         },
         mul = settings.startup["x-custom-game-robot-performance-multiplier"].value,
         modify_parameter = { -- 修改参数
@@ -58,6 +66,27 @@ local data_raw_robot_catalog = {
     roboport = { -- 机器人指令平台
         orig = {
             "roboport" -- 机器人指令平台
+        },
+        mod = {
+            "bob-roboport-2", -- boblogistics
+            "bob-roboport-3",
+            "bob-roboport-4",
+            "bob-robochest",
+            "bob-robochest-2",
+            "bob-robochest-3",
+            "bob-robochest-4",
+            "bob-logistic-zone-expander",
+            "bob-logistic-zone-expander-2",
+            "bob-logistic-zone-expander-3",
+            "bob-logistic-zone-expander-4",
+            "bob-robo-charge-port",
+            "bob-robo-charge-port-2",
+            "bob-robo-charge-port-3",
+            "bob-robo-charge-port-4",
+            "bob-robo-charge-port-large",
+            "bob-robo-charge-port-large-2",
+            "bob-robo-charge-port-large-3",
+            "bob-robo-charge-port-large-4", -- boblogistics
         },
         mul = settings.startup["x-custom-game-roboport-performance-multiplier"].value,
         modify_parameter = { -- 修改参数
