@@ -640,7 +640,120 @@ local data_raw_do_nothing_catalog = {
             "se-neural-gel-2-barrel",
             "se-cryonite-slush-barrel",
             "se-pyroflux-barrel",
-            "se-vitalic-acid-barrel"
+            "se-vitalic-acid-barrel",
+            "flying-robot-frame-2",
+            "flying-robot-frame-3",
+            "flying-robot-frame-4",
+            "robot-brain-logistic",
+            "robot-brain-logistic-2",
+            "robot-brain-logistic-3",
+            "robot-brain-logistic-4",
+            "robot-brain-construction",
+            "robot-brain-construction-2",
+            "robot-brain-construction-3",
+            "robot-brain-construction-4",
+            "robot-tool-construction",
+            "robot-tool-construction-2",
+            "robot-tool-construction-3",
+            "robot-tool-construction-4",
+            "robot-tool-logistic",
+            "robot-tool-logistic-2",
+            "robot-tool-logistic-3",
+            "robot-tool-logistic-4",
+            "bob-logistic-robot-2",
+            "bob-logistic-robot-3",
+            "bob-logistic-robot-4",
+            "bob-logistic-robot-5",
+            "bob-construction-robot-2",
+            "bob-construction-robot-3",
+            "bob-construction-robot-4",
+            "bob-construction-robot-5",
+            "bob-roboport-2",
+            "bob-roboport-3",
+            "bob-roboport-4",
+            "bob-robochest",
+            "bob-robochest-2",
+            "bob-robochest-3",
+            "bob-robochest-4",
+            "bob-logistic-zone-expander",
+            "bob-logistic-zone-expander-2",
+            "bob-logistic-zone-expander-3",
+            "bob-logistic-zone-expander-4",
+            "bob-robo-charge-port",
+            "bob-robo-charge-port-2",
+            "bob-robo-charge-port-3",
+            "bob-robo-charge-port-4",
+            "bob-robo-charge-port-large",
+            "bob-robo-charge-port-large-2",
+            "bob-robo-charge-port-large-3",
+            "bob-robo-charge-port-large-4",
+            "bob-logistic-zone-interface",
+            "roboport-antenna-1",
+            "roboport-antenna-2",
+            "roboport-antenna-3",
+            "roboport-antenna-4",
+            "roboport-chargepad-1",
+            "roboport-chargepad-2",
+            "roboport-chargepad-3",
+            "roboport-chargepad-4",
+            "roboport-door-1",
+            "roboport-door-2",
+            "roboport-door-3",
+            "roboport-door-4",
+            "basic-transport-belt",
+            "basic-underground-belt",
+            "basic-splitter",
+            "turbo-transport-belt",
+            "turbo-underground-belt",
+            "turbo-splitter",
+            "ultimate-transport-belt",
+            "ultimate-underground-belt",
+            "ultimate-splitter",
+            "steam-inserter",
+            "express-inserter",
+            "express-filter-inserter",
+            "express-stack-inserter",
+            "express-stack-filter-inserter",
+            "yellow-filter-inserter",
+            "red-filter-inserter",
+            "red-stack-inserter",
+            "red-stack-filter-inserter",
+            "turbo-inserter",
+            "turbo-filter-inserter",
+            "turbo-stack-inserter",
+            "turbo-stack-filter-inserter",
+            "stone-pipe",
+            "stone-pipe-to-ground",
+            "copper-pipe",
+            "copper-pipe-to-ground",
+            "steel-pipe",
+            "steel-pipe-to-ground",
+            "plastic-pipe",
+            "plastic-pipe-to-ground",
+            "storage-tank-2",
+            "storage-tank-3",
+            "storage-tank-4",
+            "bob-storage-tank-all-corners",
+            "bob-storage-tank-all-corners-2",
+            "bob-storage-tank-all-corners-3",
+            "bob-storage-tank-all-corners-4",
+            "logistic-chest-passive-provider-2",
+            "logistic-chest-active-provider-2",
+            "logistic-chest-storage-2",
+            "logistic-chest-buffer-2",
+            "logistic-chest-requester-2",
+            "logistic-chest-passive-provider-3",
+            "logistic-chest-active-provider-3",
+            "logistic-chest-storage-3",
+            "logistic-chest-buffer-3",
+            "logistic-chest-requester-3",
+            "bob-pump-2",
+            "bob-pump-3",
+            "bob-pump-4",
+            "bob-valve",
+            "bob-overflow-valve",
+            "bob-topup-valve"
+
         }
     },
     ["burner-generator"] = {
@@ -665,6 +778,7 @@ local data_raw_do_nothing_catalog = {
     },
     roboport = {
         mod = {
+            "bob-logistic-zone-interface",
             "aai-signal-sender",
             "aai-signal-receiver"
         }
