@@ -1,9 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.6
-Date: 2023-1-????????????????????????????????????????????????????????????????
+Date: 2023-1-28
   Features:
     - Adapted mod: jetpack
     - Adapted mod: aai-industry
+    - Adapted mod: boblogistics
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.5
 Date: 2023-1-26
